--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -1,17 +1,17 @@
 \chapter{Future work}
 \label{cha:future}
 
-Since the ROS package describe in this thesis is still in development stage many things need to be improved. Some direction of what is needed to be done will be list it in this chapter.
+Since the ROS package describes in this thesis is still in development stage many things need to be improved, some points are listed here:
 
 \begin{itemize}
- \item The highest priority is to fix triangulation in order to get a better structure initialization, this will lead a considerable improvement in the whole calibration system.
+ \item The highest priority is to fix triangulation in order to get a better structure initialization, this will lead to a considerable improvement in the whole calibration system.
 
 %  \item Use another initialization for the $[R_i t_i]$... TODO...
 
- \item User interface is require to make the package more useful.
+ \item User interface is required to make the package more useful.
 
  \item The system should be robot agnostic. There is a wizard in the new Moveit! package that can be used it to create the configuration files.
 
- \item Export URDF to file is missing. I have fixed some bugs in the URDFDom package that will let do this very easily.
+ \item Export the URDF to a file. I had to fixed some bugs in the URDF Dom package, they will allow to create this functionality.
 
 \end{itemize}
